--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,19 @@ body {
 
 .container {
   margin: 30px auto;
-  width: 350px;
+  width: 550px;
 }
 
 h1 {
   letter-spacing: 1px;
-  margin: 0;
+  margin: 0 0 1rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  text-align: center;
 }
 
 h3 {
@@ -36,7 +43,7 @@ h3 {
 }
 
 h4 {
-  margin: 0;
+  margin: 0 0 1rem;
   text-transform: uppercase;
 }
 
