--- a/src/App.css
+++ b/src/App.css
@@ -10,21 +10,20 @@
 
 body {
   background-color: #f7f7f7;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
   margin: 0;
   font-family: "Lato", sans-serif;
 }
 
 .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   margin: 30px auto;
-  width: 550px;
+  width: 1500px;
+  grid-gap: 4rem;
 }
 
-h1 {
+h2 {
   letter-spacing: 1px;
   margin: 0 0 1rem;
 }
@@ -53,7 +52,7 @@ h4 {
   padding: 20px;
   display: flex;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .inc-exp-container > div {
