--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,18 @@ body {
   font-family: "Lato", sans-serif;
 }
 
-.container {
+.container1 {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   margin: 30px auto;
   width: 1500px;
+  grid-gap: 4rem;
+}
+
+.container2 {
+  display: grid;
+  margin: 30px auto;
+  width: 500px;
   grid-gap: 4rem;
 }
 
@@ -79,8 +86,8 @@ h4 {
 }
 
 label {
-  display: inline-block;
-  margin: 10px 0;
+  display: flex;
+  margin: 10px auto;
 }
 
 input[type="text"],
